# jf-pushover-webhook

./: .gitignore  Dockerfile  README.md  SUPPORT.md  docker-compose.example.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json  renovate.json5
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/renovate/: docker.json5  labels.json5  python.json5  semanticCommits.json5
.github/workflows/: build-and-push-arm64.yml  build-and-push.yml  ci.yml  codeql.yml  devcontainer-smoke.yml  discord-test.yml  release.yml  renovate.yml  scorecard.yml  uv-lock-check.yml
app/: __init__.py  app.py  gunicorn.conf.py
podman-quadlet/: pushover-webhook.container
tests/: test_app.py
