[project]
name = "jf-pushover-webhook"
version = "0.1.0"
description = "Jellyfin to Pushover webhook service"
readme = "README.md"
keywords = ["python", "selfhosted", "homelab", "automation", "devops", "infrastructure", "it", "itops", "sysadmin", "systemadministration", "orchestration", "configurationmanagement"]
authors = [{ name = "Joe Harrison", email = "sudo-kraken@prxy.8shield.net" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
